--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "dom-to-image-more": "^3.7.2",
     "framer-motion": "^12.34.0",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
